--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>fhidemdiplomovka</groupId>
     <artifactId>fhidemdiplomovka</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/ro.pippo/pippo-core -->
         <dependency>
