--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,19 @@
             <version>1.7.5</version>
         </dependency>
     </dependencies>
-
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>sk.euba.fhi.tajj.jdbc.AppClass</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins></build>
 </project>
